# termgif

./: .gitignore  LICENSE  README.md  SECURITY.md  demo_basic.apng  demo_basic.tg  demo_custom.tg  demo_git.tg  demo_python.tg  example.tg  example_tui.tg  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml
assets/: README.md  demo.tg  demo_showcase.tg  hello.tg  live-demo.tg  terminal-demo.tg
termgif/: __init__.py  actions.py  capture.py  cli.py  config.py  preview.py  recorder.py  renderer.py  tape.py  tg_parser.py
termgif/core/: __init__.py  live.py  recorder.py  session.py  simulated.py  terminal.py
termgif/editor/: __init__.py  concat.py  overlay.py  speed.py  trim.py
termgif/exporters/: __init__.py  apng.py  asciinema.py  base.py  frames.py  gif.py  mp4.py  svg.py  webm.py  webp.py
termgif/parser/: __init__.py  tape.py  tg.py
termgif/pty/: __init__.py  emulator.py  runner.py
termgif/renderer/: __init__.py  fonts.py  styles.py  terminal.py  themes.py
termgif/templates/: __init__.py
termgif/utils/: __init__.py  config_file.py  ffmpeg.py  keyboard.py  platform.py  share.py  window.py
