[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termgif"
version = "0.2.0"
description = "Dead simple terminal GIF recorder"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["terminal", "gif", "recording", "cli", "demo", "cross-platform"]
dependencies = [
    "pillow>=10.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

# Note: --terminal screen capture uses PIL's ImageGrab (Windows/macOS only)

[project.scripts]
termgif = "termgif.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["termgif"]
